<resources>
    <!--TEXT STRINGS-->
    <string name="app_name">It Is My Experience</string>
    <string name="txtChildren">Children</string>
    <string name="txtFamily">Family</string>
    <string name="txtParents">Parents</string>
    <string name="txtChildhood">Childhood</string>
    <string name="txtWork">Work</string>
    <string name="txtSpouse">Spouse</string>
    <string name="txtWisdom">Wisdom</string>


    <!--BUTTON STRINGS-->
    <!--view home-->
    <string name="btnChildhood">Childhood</string>
    <string name="btnFamily">Family</string>
    <string name="btnWork">Work</string>
    <string name="btnWisdom">Wisdom</string>
    <!--view child-->
    <string name="btnBirth">Birth</string>
    <string name="btnFirstStep">First Step</string>
    <string name="btnWeddingDay">Wedding day</string>
    <string name="btnMemories">Memories</string>
    <!--view family-->
    <string name="btnSpouse">Spouse</string>
    <string name="btnChildren">Children</string>
    <string name="btnParents">Parents</string>


    <!--DESCRIPTION STRINGS-->
    <string name="descProfileImage">Profile Image</string>
    <string name="descParentImage">Parent Image</string>
    <string name="descChildhoodImage">Childhood Image</string>
    <string name="descWisdomImage">Wisdom Image</string>
    <string name="descWorkImage">Work Image</string>
    <string name="descSpouseImage">Spouse Image</string>
    <string name="descFamilyImage">Family Image</string>
    <string name="descChildImage">Child Image</string>

</resources>
